Update API and add domains endpoint
